fixing mobile visibility

--- a/Solution/Personal.Portfolio/wwwroot/css/mobile.css
+++ b/Solution/Personal.Portfolio/wwwroot/css/mobile.css
@@ -233,12 +233,8 @@
     letter-spacing: inherit;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 640px) {
     [data-nc-base="mobile-bar"] {
-        display: none;
-    }
-    
-    #header {
         display: none;
     }
 }
@@ -262,6 +258,10 @@
 }
 
 @media screen and (max-width: 640px) {
+    #header {
+        display: none;
+    }
+
     .index-page .index-page-content {
         padding-top: 60px;
         padding-bottom: 60px;
